--- a/AccountingApp/package.json
+++ b/AccountingApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.0",
     "@ngrx/effects": "^15.2.1",
     "@ngrx/store": "^15.1.0",
+    "@ngrx/store-devtools": "^15.2.1",
     "json-server": "^0.17.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
